# midihidi

./: Cargo.toml  README.md
.github/workflows/: build.yaml  tag.yaml
src/: error.rs  main.rs
