[package]
name = "midihid"
version = "0.1.0"
edition = "2021"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = [] }
clap = { version = "4.0.10", features = ["derive", "wrap_help", "unicode"] }
jack = "0.8.0"                               # Real time audio and midi with JACK.
thiserror = "1.0.22"
