[package]
name = "midihidi"
version = "0.1.0"
edition = "2021"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = [] }
clap = { version = "4.0.10", features = ["derive", "wrap_help", "unicode"] }
ctrlc = "3.2.3"
input-linux = { version = "0.5.0", features = ["bytes"] }
jack = "0.8.0"                               # Real time audio and midi with JACK.
nix = "0.25.0"
thiserror = "1.0.22"
